--- a/src/app/gifs/pages/home/home-page.component.css
+++ b/src/app/gifs/pages/home/home-page.component.css
@@ -6,5 +6,6 @@ h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   font-size: 30px;
+  text-align: center;
 
 }
