--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -3,6 +3,7 @@
   width: 250px;
 }
 
+
 .list-group-item:hover{
  background-color: coral;
 
@@ -12,11 +13,10 @@
   display: flex;
   justify-content: space-between;
   gap: 30px;
-
 }
 
 .btn-clear{
-	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+	background:red;
 	background-color:#6c1005;
 	border-radius:6px;
 	border:1px solid #050202;
