--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="bg-dark border-right p-3" id="sidebar" >
   <div class="container">
     <h3 class="text-light">Gifs App</h3>
-    <button *ngIf="tags.length > 0" (click)="borrarCache()" class="btn-clear">Borrar</button>
+    <button *ngIf="tags.length > 0" (click)="borrarCache()" class="btn btn-danger">Limpiar</button>
   </div>
   <hr class="text-white">
 
